--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Papers - Free Bootstrap 4 Template by Colorlib</title>
+    <title>Aurélie & Antonin se marient</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -52,7 +52,7 @@
       <div class="container">
         <div class="row align-items-center ftco-vh-100">
           <div class="col-md-7">
-            <h1 class="ftco-heading mb-3" data-aos="fade-up" data-aos-delay="500">Antonin et Aurélie<br/>se marient !</h1>
+            <h1 class="ftco-heading mb-3" data-aos="fade-up" data-aos-delay="500">Aurélie et Antonin<br/>se marient !</h1>
             <div class="h5 ftco-subheading mb-5" data-aos="fade-up"  data-aos-delay="600">
 				→ Le <strong>samedi 27 avril</strong> à 11h, à Paris mairie du 19ᵉ<br/>
 				→ Le <strong>samedi 13 juillet</strong> à 16h, à côté d'Auxerre
@@ -95,7 +95,7 @@
       </div>
     </section>
 
-    <section class="section-2-blocks-wrapper-2">
+    <section class="section-2-blocks-wrapper-2 hidden">
       <div class="container-fluid">
         <div class="section-2-blocks-wrapper row no-gutters d-flex" style="background: #fafafa;">
           
