--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="airtable.js"></script>
   <script src="contentful.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Delius" rel="stylesheet">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
       <section class="page">
         <h3>Répondez à notre invitation&nbsp;!</h3>
         <p><select class="form-control" id="qui_etes_vous" placeholder="qui_etes_vous" onchange="replaceDestinataire()"></select></p>
-        <p><a id="go_to_rsvp" href="#" class="btn btn-danger">→ Continuer</a></p>
+        <p><a id="go_to_rsvp" href="#accueil" class="btn btn-danger">→ Continuer</a></p>
         </div>
       </section>
     </div>
@@ -69,16 +70,17 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
+    font-family: Delius, sans-serif;
   }
 
   h1, h2, h3, h4, h5, h6 { line-height: 1.1; font-weight: 500; margin-top: 0; margin-bottom: 1rem; }
 
-  h1 { font-size: 3.5rem; font-family: Caveat, Georgia, cursive; line-height: 1; }
+  h1 { font-size: 3.6rem; font-family: Caveat, Georgia, cursive; line-height: 1; }
   h1 span, h2 span, h3 span { display: inline-block; }
-  h2 { font-size: 2.8rem; font-family: Caveat, Georgia, cursive; text-align: center; }
-  h3 { font-size: 2rem; font-family: Caveat, Georgia, cursive; }
+  h2 { font-size: 3rem; font-family: Caveat, Georgia, cursive; text-align: center; }
+  h3 { font-size: 2.2rem; font-family: Caveat, Georgia, cursive; }
 
-  audio { margin: 1rem; margin-bottom: -2rem; border-radius: 4px; }
+  audio { margin: 1rem; margin-bottom: -2rem; border-radius: 4px; transform: scale(.9); }
 
   .form-control:focus { box-shadow: 0 0 0 .2rem rgba(199, 44, 72, .25); border-color: rgba(199, 44, 72, .35); }
 
