--- a/rsvp.html
+++ b/rsvp.html
@@ -14,7 +14,8 @@
 
 <body>
 
-  <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope" rel="stylesheet"> 
 
   <div id="loader"><div class="loader-text">ça charge !</div></div>
 
@@ -218,6 +219,7 @@
     background-attachment: fixed;
     background-size: cover;
     background-position: center center;
+    font-family: Delius, sans-serif;
   }
 
   h1, h2, h3, h4, h5, h6 { line-height: 1.2; font-weight: 500; margin-top: 0; margin-bottom: 1rem; }
