--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <script src="contentful.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Caveat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Delius" rel="stylesheet">
+  <title>Antonin et Aurélie se marient !</title>
 </head>
 
 <body>
