--- a/rsvp.html
+++ b/rsvp.html
@@ -10,6 +10,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="airtable.js"></script>
+  <title>Antonin et Aurélie se marient !</title>
 </head>
 
 <body>
