--- a/rsvp.html
+++ b/rsvp.html
@@ -188,7 +188,7 @@
     <p>Nous avons hâte de vous retrouver !</p>
     <p>Pour finir, vous pouvez dès maintenant pré-réserver un hébergement parmi ceux que nous vous proposons.</p>
     <p><strong>Attention</strong>, le mariage ayant lieu en saison haute, la plupart des hébergements doivent être réservés avant fin février !</p>
-    <a class="section__next btn btn-danger" href="pages.html#dormir">→ Voir les hébergements</a>
+    <a class="section__next btn btn-danger" href="index.html#dormir">→ Voir les hébergements</a>
 
   </section>
 
