added liste de mariage

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <ul class="nav justify-content-center">
     <li class="nav-item"><a class="nav-link" href="#accueil">Accueil</a></li>
+    <li class="nav-item"><a class="nav-link" href="https://listemariagegrooveyre.pythonanywhere.com">Liste de Mariage</a></li>
   </ul>
 
   <div id="pages">
