--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <div id="pages">
     <div id="accueil" class="pageWrapper">
-      <section class="page">
+      <section class="page" style="display: none;">
         <h3>Répondez à notre invitation&nbsp;!</h3>
         <p><select class="form-control" id="qui_etes_vous" placeholder="qui_etes_vous" onchange="replaceDestinataire()"></select></p>
         <p><a id="go_to_rsvp" href="#accueil" class="btn btn-danger">→ Continuer</a></p>
